--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ferish-07.github.io/myntra",
+  "homepage": "https://ferish-07.github.io/myntra-web",
   "name": "myntra",
   "version": "0.1.0",
   "private": false,
